# thiru_practice

./: README.md
Docker/: docker.txt
cmake/project/: CMakeLists.txt  readme.txt
cmake/sharedlib/: CMakeLists.txt  readme.txt
cmake/staticlib/: CMakeLists.txt  readme.txt
cmake/testlib/: CMakeLists.txt  main.cpp  readme.txt
codelet/: countoddintherange.cpp  findparenthesesposition.cpp  movezerotoleft.cpp  palindromestring.cpp  permutationpalindrome.cpp  reversewordsinstring.cpp  rotatearray.cpp  sortedsearch.cpp  sumsofar.cpp  turntakingarray.cpp
codility/: missinginteger.cpp
designpattern/cpp/: adapter.cpp  factorymethod.cpp  observer.cpp  singleton.cpp
leetcode/cpp/: allduplicatesinarray442.cpp  binarytreeinorder94.cpp  binarytreelevelorder102.cpp  binarytreepostorder145.cpp  binarytreepreorder144.cpp  binarytreezigzaglevelorder103.cpp  containsduplicate219.cpp  countelementsmaxfrequency3005.cpp  countprimes204.cpp  decodestring394.cpp  defangipaddress.cpp  findfirstoccurindex28.cpp  findifpathexistsingraph1971.cpp  findminmaxinarray.cpp  increasingordersearchtree897.cpp  invertbinarytree226.cpp  jewelsstones771.cpp  leetcode11containermostwater.cpp  leetcode152maximumproductsubarray.cpp  leetcode153findminrotatedsortedarray.cpp  (+23 more)
linux/: findendianness.cpp  simpleservice.cpp  simpleservice.service
notes/: Build Yocto image for Raspberrypi 3.txt  Ethernet.txt  Linux_systemd.txt  Network Glossary.txt  Network Layers.txt  TCP_UDP_Headers.txt  arduino_uno_uart.txt  embedded_com_protocols.txt  mqtt.txt  proto_buffers.txt
rust/: reversestring.rs
(+196 files in other folders)
